--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-cors-headers==4.2.0
 django-timezone-field==6.0.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+docker==6.1.3
 drf-yasg==1.21.7
 idna==3.4
 inflection==0.5.1
@@ -37,3 +38,4 @@ uritemplate==4.1.1
 urllib3==2.0.6
 vine==5.0.0
 wcwidth==0.2.8
+websocket-client==1.6.4
